fix: positioning and spacing of navbar and some other things

--- a/UI/Web/src/app/series-detail/_components/series-metadata-detail/series-metadata-detail.component.scss
+++ b/UI/Web/src/app/series-detail/_components/series-metadata-detail/series-metadata-detail.component.scss
@@ -9,7 +9,7 @@
 
 .publication {
   display: flex;
-  gap: 0.5vmin;
+  gap: 0.5vmax;
   align-items: center;
 }
 
